#17 - Added support for modifying the database structure from the code #17 - Added driver table #17 - Added driver_car table #17 - Added driver_ride table #17 - Created initial prototype for sending sms #17 - Moved some mysql configurations
#30 - Added support for modifying the database structure from the code
#30 - Refactored code to create and list rides.
#30 - Added missing tests.
#30 - Moved backend sources.
#30 - Implemented express application for running locally.
#30 - Reestructured backend code to use ES6 classes

--- a/doc/carpal-api.yaml
+++ b/doc/carpal-api.yaml
@@ -162,7 +162,7 @@ components:
           type: string
         status:
           type: string
-          description: Can be Open / Closed
+          description: Can be Open / Confirmed / Canceled / Ended
     Location:
       properties:
         latitude:
